--- a/css/locked.css
+++ b/css/locked.css
@@ -3,6 +3,10 @@
     display: none;
 }
 
+.launch-overlay {
+    display: none;
+}
+
 /* ===============================
    OVERLAY
 ================================= */
