--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,10 @@ li + ul {
     display: none !important;
 }
 
+html.preload-lock .launch-overlay {
+    display: none !important;
+}
+
 /* HEADER */
 
 .header {
